--- a/src/main/resources/templates/editProfile.html
+++ b/src/main/resources/templates/editProfile.html
@@ -17,15 +17,16 @@
                             <label for="firstName">First Name:</label>
                             <input class="form-control" type="text" th:field="*{firstName}" id="firstName" placeholder="enter firstName" th:pattern="${textBasicPattern}">
                             <div class="invalid-feedback">Please fill out this field correctly</div>
-                            <div th:replace="fragments/components::backendValidationFieldErrors('firstName')"></div>
+                            <div th:replace="fragments/components::backendSpecificObjectFieldErrors('firstName')"></div>
                         </div>
                         <div class="form-group">
                             <label for="lastName">Last Name:</label>
                             <input class="form-control" type="text" th:field="*{lastName}" id="lastName" placeholder="enter lastName" th:pattern="${textBasicPattern}">
                             <div class="invalid-feedback">Please fill out this field correctly</div>
-                            <div th:replace="fragments/components::backendValidationFieldErrors('lastName')"></div>
+                            <div th:replace="fragments/components::backendSpecificObjectFieldErrors('lastName')"></div>
                         </div>
                         <button th:replace="fragments/components::saveButton"></button>
+                        <a th:replace="fragments/components::cancelButtonToHome"></a>
                     </form>
                 </div>
                 <div class="col-sm-3 bg-white"></div>
