--- a/src/main/resources/templates/emailConfirmationError.html
+++ b/src/main/resources/templates/emailConfirmationError.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
-    <head th:replace="fragments/components::head('Registration Error')"></head>
+    <head th:replace="fragments/components::head('Email Confirmation Error')"></head>
     <body>
         <div class="container-fluid">
             <!-- header -->
@@ -18,7 +18,7 @@
                     <hr class="mb-4 mt-0"/>
                     <div class="bg-light">
                         <br/>
-                        <p class="m-0 px-2">Register again <a class="text-info" th:href="@{/newUser}" style="text-decoration: none">here</a> or, if you need assistance, please <a class="text-info" th:href="@{/contactUs}" style="text-decoration: none">contact us</a>.</p>
+                        <p class="px-2">If you need assistance, please <a class="text-info" th:href="@{/contactUs}" style="text-decoration: none">contact us.</a></p>
                         <br/>
                     </div>
                 </div>
