--- a/src/main/resources/templates/editPassword.html
+++ b/src/main/resources/templates/editPassword.html
@@ -5,38 +5,46 @@
     <head th:replace="fragments/components::head('Edit Password')"></head>
     <body>
         <div class="container-fluid">
+            <!-- header -->
             <header th:replace="fragments/components::header"></header>
             <!-- main categories -->
             <div th:replace="fragments/components::mainCatsNavBar"></div>
-            <header th:replace="fragments/components::title(text = 'Edit Password')"></header>
+            <!-- title -->
+            <div th:replace="fragments/components::title(text = 'Edit Password')"></div>
+            <!-- main content -->
             <div class="row">
                 <div class="col-sm-3 bg-white"></div>
                 <div class="col-sm-6 bg-light">
                     <form class="needs-validation" novalidate id="form" th:action="@{/user/editPassword}" th:object="${formPassword}" method="POST" action="#">
+                        <!-- Current Password -->
                         <div class="form-group">
                             <label for="currentPassword">Current Password:</label>
                             <input class="form-control" type="password" th:field="*{currentPassword}" id="currentPassword" placeholder="enter current password" required/>
                             <div class="invalid-feedback">Please introduce your current password</div>
-                            <div th:replace="fragments/components::backendValidationFieldErrors('currentPassword')"></div>
+                            <div th:replace="fragments/components::backendSpecificObjectFieldErrors('currentPassword')"></div>
                         </div>
+                        <!-- New Password -->
                         <div class="form-group">
                             <label for="newPassword">New Password:</label>
                             <input class="form-control" type="password" th:field="*{password}" id="newPassword" placeholder="enter new password" required th:pattern="${passwordPattern}" th:title="#{password.invalidFormat}"/>
                             <div class="invalid-feedback" th:text="#{password.invalidFormat}">Please fill out this field with a valid password</div>
-                            <div th:replace="fragments/components::backendValidationFieldErrors('password')"></div>
+                            <div th:replace="fragments/components::backendSpecificObjectFieldErrors('password')"></div>
                         </div>
+                        <!-- Confirm New Password -->
                         <div class="form-group">
                             <label for="newPasswordConfirm">Confirm New Password:</label>
                             <input class="form-control" type="password" th:field="*{matchingPassword}" id="newPasswordConfirm" placeholder="confirm new password" required pattern=".*" title="Please enter the same password as above"/>
                             <div class="invalid-feedback" th:text="#{password.notMatching}">Please enter the same password as above</div>
-                            <div th:replace="fragments/components::backendValidationFieldErrors('matchingPassword')"></div>
+                            <div th:replace="fragments/components::backendSpecificObjectFieldErrors('matchingPassword')"></div>
                         </div>
+                        <!-- Save or Cancel -->
                         <button th:replace="fragments/components::saveButton"></button>
-                        <a th:replace="fragments/components::cancelButton"></a>
+                        <a th:replace="fragments/components::cancelButtonToHome"></a>
                     </form>
                 </div>
                 <div class="col-sm-3 bg-white"></div>
             </div>
+            <!-- footer -->
             <footer th:replace="fragments/components::fixedFooter"></footer>
         </div>
         <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
