--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -36,18 +36,24 @@
                         <!-- Navbar links -->
                         <div class="collapse navbar-collapse" id="#collapsibleNavbar">
                             <ul class="navbar-nav mr-auto">
+                                <!--public links-->
                                 <li class="nav-item">
                                     <a class="nav-link text-white font-italic" th:href="@{/home}">FirstMarket</a>
                                 </li>
-                                <!--user dropdown-->
+                                <!--user links-->
+                                <li class="nav-item" sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
+                                    <a class="nav-link text-white font-weight-bold" th:href="@{/user/purchases}">Purchases</a>
+                                </li>
                                 <li class="nav-item dropdown" sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
                                     <a class="nav-link dropdown-toggle text-white font-weight-bold" href="#" data-toggle="dropdown">My Account</a><!--id="navbardrop"-->
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" th:href="@{/user/editProfile}">Profile</a>
-                                        <a class="dropdown-item" th:href="@{/user/purchases}">Purchases</a>
+                                        <a class="dropdown-item" th:href="@{/user/editProfile}">Edit Profile</a>
+                                        <a class="dropdown-item" th:href="@{/user/editEmail}">Edit Email</a>
                                         <a class="dropdown-item" th:href="@{/user/editPassword}">Edit Password</a>
+                                        <a class="dropdown-item" th:href="@{/user/deleteAccount}">Delete Account</a>
                                     </div>
                                 </li>
+                                <!--admin links-->
                                 <li class="nav-item" sec:authorize="hasRole('ADMIN')">
                                     <a class="nav-link text-white font-weight-bold" th:href="@{/books}">Books</a>
                                 </li>
@@ -130,8 +136,11 @@
         <!-- Save button -->
         <button th:fragment="saveButton" class="btn btn-info px-5 mb-3" type="submit">Save</button>
 
-        <!-- Cancel button -->
-        <a th:fragment="cancelButton" class="btn btn-secondary px-5 mb-3 text-white" onclick="window.history.back();">Cancel</a>
+        <!-- Cancel button (toBack) -->
+        <a th:fragment="cancelButtonToBack" class="btn btn-secondary px-5 mb-3 text-white" onclick="window.history.back();">Cancel</a>
+
+        <!-- Cancel button (toHome) -->
+        <a th:fragment="cancelButtonToHome" class="btn btn-secondary px-5 mb-3 text-white" th:href="@{/home}">Cancel</a>
 
         <div th:fragment="addButton(action)">
             <a class="btn btn-outline-info btn-sm my-2 px-5 float-right" th:href="@{/admin/{param}(param=${action})}">Add</a>
@@ -141,7 +150,7 @@
             <a class="btn btn-outline-info btn-sm my-2 btn-block" th:href="@{/{param1}/{param2}(param1=${subject},param2=${action})}">Purchase</a>
         </div>
 
-        <!-- backend errors -->
+        <!-- login error -->
         <div th:fragment="loginError" class="my-2" th:if="${param.error != null}">
             <div class="alert alert-danger alert-dismissible fade show">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -149,16 +158,24 @@
             </div>
         </div>
 
-        <!-- backend errors -->
-        <div th:fragment="backendValidationErrors" class="mt-1" th:if="${#fields.hasErrors()}">
+        <!-- backend request param error -->
+        <div th:fragment="backendRequestParamError" class="my-2" th:if="${message != null}">
+            <div class="alert alert-danger alert-dismissible fade show mb-1">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <strong>Error: </strong><span th:text="${message}"></span>
+            </div>
+        </div>
+
+        <!-- backend generic object-field errors -->
+        <div th:fragment="backendGenericObjectFieldErrors" class="mt-1" th:if="${#fields.hasErrors()}">
             <div class="alert alert-danger alert-dismissible fade show mb-2">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
                 <strong>Server Validation Error: </strong><span th:text="#{validation.generic}"></span>
             </div>
         </div>
 
-        <!-- backend field errors -->
-        <div th:fragment="backendValidationFieldErrors(field)" class="mt-n2" th:if="${#fields.hasErrors(field)}">
+        <!-- backend specific object-field errors -->
+        <div th:fragment="backendSpecificObjectFieldErrors(field)" class="mt-n2" th:if="${#fields.hasErrors(field)}">
             <div class="alert alert-danger alert-dismissible fade show mb-1" th:each="error : ${#fields.errors(field)}">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
                 <strong>Error: </strong><span th:text="${error}"></span>
