--- a/src/main/resources/templates/editEmail.html
+++ b/src/main/resources/templates/editEmail.html
@@ -29,6 +29,7 @@
                             <input class="form-control" type="password" name="password" id="password" placeholder="enter your password" required />
                             <div class="invalid-feedback">Please introduce your current password</div>
                         </div>
+                        <!-- save or cancel -->
                         <button th:replace="fragments/components::saveButton"></button>
                         <a th:replace="fragments/components::cancelButtonToHome"></a>
                     </form>
