--- a/src/main/resources/templates/newBook.html
+++ b/src/main/resources/templates/newBook.html
@@ -204,7 +204,7 @@
             </div>
             <footer th:replace="fragments/components::footer"></footer>
         </div>
-        <!--<script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>-->
+        <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
         <script th:src="@{/js/isbnChecksum.js}"></script>
         <script th:src="@{/js/binaryInputSwitch.js}"></script>
         <script th:src="@{/js/manageAuthors.js}"></script>
