--- a/src/main/resources/templates/newCategory.html
+++ b/src/main/resources/templates/newCategory.html
@@ -13,12 +13,14 @@
                 <div class="col-sm-3 bg-white"></div>
                 <div class="col-sm-6 bg-light">
                     <form class="needs-validation" novalidate th:action="@{/admin/newCategory}" th:object="${category}" method="POST" action="#">
+                        <!-- name -->
                         <div class="form-group">
                             <label for="name">Name:</label>
                             <input class="form-control" type="text" th:field="*{name}" id="name" placeholder="enter name" th:pattern="${textBasicPattern}">
                             <div class="invalid-feedback">Please fill out this field correctly</div>
-                            <div th:replace="fragments/components::backendSpecificObjectFieldErrors('name')"></div>
                         </div>
+                        <div th:replace="fragments/components::backendSpecificObjectFieldErrors('name')"></div>
+                        <!-- parent category -->
                         <div class="form-group">
                             <label for="parent">Nested under:</label>
                             <select class="custom-select" th:field="*{parent.id}" id="parent" >
@@ -28,6 +30,7 @@
                                 </option>
                             </select>
                         </div>
+                        <!-- save or cancel -->
                         <button th:replace="fragments/components::saveButton"></button>
                         <a th:replace="fragments/components::cancelButtonToBack"></a>
                     </form>
