--- a/src/main/resources/templates/editPassword.html
+++ b/src/main/resources/templates/editPassword.html
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col-sm-3 bg-white"></div>
                 <div class="col-sm-6 bg-light">
-                    <form class="needs-validation" novalidate id="form" th:action="@{/user/editPassword}" th:object="${formPassword}" method="POST" action="#">
+                    <form class="needs-validation" novalidate id="form" th:action="@{/editPassword}" th:object="${formPassword}" method="POST" action="#">
                         <!-- Current Password -->
                         <div class="form-group">
                             <label for="currentPassword">Current Password:</label>
