--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -49,7 +49,7 @@
                                     <div class="dropdown-menu">
                                         <a class="dropdown-item" th:href="@{/user/editProfile}">Edit Profile</a>
                                         <a class="dropdown-item" th:href="@{/user/editEmail}">Edit Email</a>
-                                        <a class="dropdown-item" th:href="@{/user/editPassword}">Edit Password</a>
+                                        <a class="dropdown-item" th:href="@{/editPassword}">Edit Password</a>
                                         <a class="dropdown-item" th:href="@{/user/deleteAccount}">Delete Account</a>
                                     </div>
                                 </li>
@@ -68,6 +68,12 @@
                                 </li>
                                 <li class="nav-item" sec:authorize="hasRole('ADMIN')">
                                     <a class="nav-link text-white font-weight-bold" th:href="@{/admin/purchases}">Purchases</a>
+                                </li>
+                                <li class="nav-item dropdown" sec:authorize="hasRole('ADMIN')">
+                                    <a class="nav-link dropdown-toggle text-white font-weight-bold" href="#" data-toggle="dropdown">Settings</a><!--id="navbardrop"-->
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" th:href="@{/editPassword}">Edit Password</a>
+                                    </div>
                                 </li>
                             </ul>
                             <ul class="navbar-nav">
