--- a/src/main/resources/templates/resetPasswordConfirmation.html
+++ b/src/main/resources/templates/resetPasswordConfirmation.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
-    <head th:replace="fragments/components::head('Email Confirmation')"></head>
+    <head th:replace="fragments/components::head('Reset Password')"></head>
     <body>
         <div class="container-fluid">
             <!-- header -->
@@ -10,15 +10,16 @@
             <!-- main categories -->
             <div th:replace="fragments/components::mainCatsNavBar"></div>
             <!-- title -->
-            <div th:replace="fragments/components::title(text = 'Email Confirmation')"></div>
+            <div th:replace="fragments/components::title(text = 'Reset Password')"></div>
             <!-- Content -->
             <div class="row bg-white">
                 <div class="col-sm-3"></div>
                 <div class="col-sm-6">
                     <hr class="mb-4 mt-0"/>
                     <div class="bg-light">
-                        <p class="px-2">You should have received an email with a confirmation link. In order to complete the process, please click on it.</p>
-                        <p class="px-2">Remember to check your spam folder. If you need assistance, please <a class="text-info" th:href="@{/contactUs}" style="text-decoration: none">contact us.</a></p>
+                        <p class="px-2">You should have received an email with the reset password.</p>
+                        <p class="px-2">We strongly recommend that you replace the password provided with a new one.</p>
+                        <p class="px-2">If you need assistance, please <a class="text-info" th:href="@{/contactUs}" style="text-decoration: none">contact us.</a></p>
                     </div>
                 </div>
                 <div class="col-sm-3"></div>
