--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -50,7 +50,7 @@
                                         <a class="dropdown-item" th:href="@{/user/editProfile}">Edit Profile</a>
                                         <a class="dropdown-item" th:href="@{/user/editEmail}">Edit Email</a>
                                         <a class="dropdown-item" th:href="@{/editPassword}">Edit Password</a>
-                                        <a class="dropdown-item" th:href="@{/user/deleteAccount}">Delete Account</a>
+                                        <a class="dropdown-item" th:href="@{/user/deleteUser}">Delete Account</a>
                                     </div>
                                 </li>
                                 <!--admin links-->
@@ -141,6 +141,9 @@
 
         <!-- Save button -->
         <button th:fragment="saveButton" class="btn btn-info px-5 my-3" type="submit">Save</button>
+
+        <!-- Delete account button -->
+        <button th:fragment="deleteAccountButton" class="btn btn-danger px-5 my-3" type="submit">Delete Account</button>
 
         <!-- Cancel button (toBack) -->
         <a th:fragment="cancelButtonToBack" class="btn btn-secondary px-5 my-3 text-white" onclick="window.history.back();">Cancel</a>
